css/base.css
@charset "UTF-8";
body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    font-size: 16px;
    /*-webkit-font-smoothing: antialiased; */
}

.navbar-default {
    background-color: #fff;  /* #4B77BE; */
    border-color:#fff;
    color:#000;
    height:75px;
}
.navbar-default .navbar-nav >li>a {
    color:#999;
    font-weight: 700;
}
.header-title {
    color:#000;
    margin-top:25px;
}
.header-title img {
    vertical-align: bottom;
    width:45px;
    margin-right: 20px;
}
.header-title .h2 {
    display:inline-block;
    vertical-align:top;    
    color:#333;
    font-weight: 800;
}

img.thumb {
    width:240px;
}
img.thumb-right {
    width:240px;
    float:right;
}
img.thumb-left {
    width:240px;
    float:left;
}

.border-top {
    border-top: 1px dashed #ddd;
}
.row-space {
    margin-top:25px;
    padding-top:50px;
}

